<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:backgroundTint="#F6F6F6"
    tools:context=".Cadastrar">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="89dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_email"
        android:importantForAutofill=""
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/endereco"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/complemento"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />

    <Button
        android:id="@+id/voltar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:text="@string/voltar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="5dp" />

    <Button
        android:id="@+id/cadastar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="127dp"
        android:layout_height="59dp"
        android:text="@string/confirmar"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="656dp" />

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="187dp"
        android:layout_height="24dp"
        android:fontFamily="sans-serif"
        android:foregroundTint="#000000"
        android:text="Crie seu cadastro"
        android:textAlignment="center"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="55dp" />
</androidx.constraintlayout.widget.ConstraintLayout>