<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="#F6F6F6"
    android:backgroundTint="#F6F6F6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize" >

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#BD3F3C"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:backgroundTint="#F6F6F6"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/mobile_navigation" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/descricao_do_produto"
        tools:ignore="LabelFor,MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="456dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/produto_1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="24dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/produto_2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/produto_3"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="389dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/cookiemordido"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="86dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/cookiemordido"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="95dp"
        android:layout_height="86dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/cookiemordido"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:background="#F6F6F6"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/carrinho"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="215dp" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:background="#F6F6F6"
        app:srcCompat="@drawable/carrinho"
        tools:layout_editor_absoluteX="341dp"
        tools:layout_editor_absoluteY="394dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:background="#F6F6F6"
        app:srcCompat="@drawable/carrinho"
        tools:layout_editor_absoluteX="341dp"
        tools:layout_editor_absoluteY="31dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/descricao_do_produto"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/descricao_do_produto"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="277dp" />

</androidx.constraintlayout.widget.ConstraintLayout>